Fixed header at top, removed overflow scroll x from body (header buttons bug)

--- a/src/Components/Layout/Footer.module.css
+++ b/src/Components/Layout/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  min-height: 100px;
+  width: 100%;
   background: linear-gradient(
     180deg,
     rgba(42, 116, 201, 1) 0%,
