--- a/src/Components/Layout/Viewport.module.css
+++ b/src/Components/Layout/Viewport.module.css
@@ -9,4 +9,5 @@
   );
   background-size: 100% 13em;
   background-repeat: no-repeat;
+  overflow-y: scroll;
 }
