--- a/src/Components/UI/Button.module.css
+++ b/src/Components/UI/Button.module.css
@@ -6,6 +6,7 @@
   font-size: 16px;
   margin: 15px 15px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+  box-sizing: border-box;
 }
 .blue {
   color: white;
