--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
   font-style: unset;
+  overflow-x: hidden;
 }
 #root {
   position: absolute;
